--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+/*sa moara camiluta mea ca nu mai pot vereeeeeeeeeeeeeeeeeeee
+barcelona
+alea
+alea*/
 body {
     font-family: Arial, sans-serif;
     text-align: center;
